@@ -146,11 +146,15 @@ NOTICE:  "<current>"."t"."g" is empty or not analyzed
 #877.1|
 NOTICE:  "public"."t"."g" is empty or not analyzed
 #877.2|
+NOTICE:  "public"."t"."g" is empty or not analyzed
+#877.2.deprecated|
 NOTICE:  "<current>"."t"."g" is empty or not analyzed
 #877.3|
 #877.4|BOX(-10 -50,20 30)
 NOTICE:  "<current>"."t"."g" is empty or not analyzed
 #818.1|
+NOTICE:  "<current>"."t"."g" is empty or not analyzed
+#818.1.deprecated|
 <#1320>
 #1320.geog.1|MULTIPOLYGON|4326
 #1320.geom.1|MULTIPOLYGON|4326
